<resources>
    <string name="app_name">Kółko i krzyżyk</string>
    <string name="o_aplikacji">O aplikacji</string>
    <string name="o_witchcraft_lab">O Witchcraft Lab</string>
    <string name="informacje">Informacje</string>
    <string name="zakoncz">Zakończ</string>
    <string name="kolejka">Kolejka</string>
    <string name="nowa_gra">Nowa gra</string>
    <string name="wybierz_znak">Wybierz znak</string>
    <string name="dalej">Dalej</string>
    <string name="sc">Jasność</string>
    <string name="led_kolor">Led kolor</string>
    <string name="wstecz">Wstecz</string>
    <string name="prosze_wybrac_symbol">Proszę wybrać symbol</string>
    <string name="komunikat">Komunikat</string>
    <string name="no_internet_connection">Aplikacja wymaga dostępu do internetu</string>
    <string name="blad_polaczenia_z_serwerem">Połączenie z serwerem zostało zerwane</string>
    <string name="test">LED test</string>
    <string name="twoj_symbol">Twój symbol</string>
</resources>
