<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_burger_o"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/o_aplikacji"
        android:textColor="#000"
        android:textSize="14dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_burger_lab"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/o_witchcraft_lab"
        android:textColor="#000"
        android:textSize="14dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_burger_info"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/informacje"
        android:textColor="#000"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/serverDiagnostic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_burger_info"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="Diagnostyka serwera"
        android:textColor="#000"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/testButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_burger_info"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/test"
        android:textColor="#000"
        android:textSize="14dp"/>

</LinearLayout>
