<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:text="@string/sc"
            android:textColor="#000"
            android:textSize="14dp"/>

        <tic.tack.toe.arduino.CustomSeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="255"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:text="@string/led_kolor"
            android:textColor="#000"
            android:textSize="14dp"/>

        <tic.tack.toe.arduino.CustomColorPicker
            android:id="@+id/colorPicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="10dp"
            custom:hue="120"
            custom:saturation="1.0"
            custom:value="1.0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/previousButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/wstecz"
            android:textColor="#fff"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/dalej"
            android:textColor="#fff"
            android:textSize="14dp"/>
    </LinearLayout>
</RelativeLayout>