<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/burger_img"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_burger_o"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/o_aplikacji"
                    android:textColor="#000"
                    android:textSize="14dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_burger_lab"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/o_witchcraft_lab"
                    android:textColor="#000"
                    android:textSize="14dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_burger_info"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/informacje"
                    android:textColor="#000"
                    android:textSize="14dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="Led color (hex)"
                    android:textColor="#000"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/ledColorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:text="ff0000"/>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="50dp">

            <Button
                android:id="@+id/finishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:text="@string/zakoncz"
                android:textColor="#fff"
                android:textSize="14dp"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>